:sparkles: add show company handler logic
