# router/routes.go
@@ -23,8 +23,11 @@ func InitializeRoutes(r *gin.Engine) {
 		v1.GET("/companies", func(ctx *gin.Context) {
 			handler.ListCompaniesHandler(ctx)
 		})
-		v1.DELETE("company", func(ctx *gin.Context) {
+		v1.DELETE("/company", func(ctx *gin.Context) {
 			handler.DeleteCompanyHandler(ctx)
+		})
+		v1.GET("/company", func(ctx *gin.Context) {
+			handler.ShowCompanyHandler(ctx)
 		})
 	}
 
